--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,16 +1,28 @@
 set(PYBIND11_FINDPYTHON ON)
 find_package(pybind11 CONFIG REQUIRED)
 
+# CPU module
 set(LOKI_PYMODULE_NAME lib${LOKI_LIBRARY_NAME})
 pybind11_add_module(${LOKI_PYMODULE_NAME} loki_python.cpp)
-
-# Include directories needed for the binding code
 target_include_directories(
   ${LOKI_PYMODULE_NAME} PRIVATE ${PROJECT_SOURCE_DIR}/include ${PROJECT_SOURCE_DIR}/lib
 )
-
-# Link against the main library
-target_link_libraries(${LOKI_PYMODULE_NAME} PRIVATE ${LOKI_LIBRARY_NAME} ${LOKI_COMPILE_OPTIONS})
-
-# Install the Python module
+target_link_libraries(
+  ${LOKI_PYMODULE_NAME} PUBLIC ${PROJECT_NAME}::${LOKI_LIBRARY_NAME} ${LOKI_COMPILE_OPTIONS}
+)
 install(TARGETS ${LOKI_PYMODULE_NAME} DESTINATION ${LOKI_LIBRARY_NAME})
+
+# GPU module (if CUDA is available)
+if(CMAKE_CUDA_COMPILER)
+  set(LOKI_PYGPUMODULE_NAME libcuda${LOKI_LIBRARY_NAME})
+  pybind11_add_module(${LOKI_PYGPUMODULE_NAME} loki_python_cuda.cpp)
+  target_include_directories(
+    ${LOKI_PYGPUMODULE_NAME} PUBLIC ${PROJECT_SOURCE_DIR}/include ${CUDAToolkit_INCLUDE_DIRS}
+  )
+  target_link_libraries(
+    ${LOKI_PYGPUMODULE_NAME}
+    PUBLIC ${PROJECT_NAME}::${LOKI_LIBRARY_NAME} ${LOKI_COMPILE_OPTIONS}
+    PRIVATE ${LOKI_CUDA_OPTIONS}
+  )
+  install(TARGETS ${LOKI_PYGPUMODULE_NAME} DESTINATION ${LOKI_LIBRARY_NAME})
+endif()
