Enhance FFA functionality and improve data handling
- Modified `PruningManager` to support ComplexType
- Renamed and updated S/N calculation functions to `snr_boxcar_1d`, `snr_boxcar_2d`, and added `snr_boxcar_3d` for improved clarity and functionality.
- Introducing python bindings - `search.py`
- Updated `pyproject.toml` to include `pyloki` as a dependency (might remove later)

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -94,8 +94,10 @@ CPMAddPackage(
   GITHUB_REPOSITORY bshoshany/thread-pool
   VERSION 5.0.0 EXCLUDE_FROM_ALL SYSTEM
 )
-add_library(BS_thread_pool INTERFACE)
-target_include_directories(BS_thread_pool INTERFACE ${BS_thread_pool_SOURCE_DIR}/include)
+if(BS_thread_pool_ADDED)
+  add_library(BS_thread_pool INTERFACE IMPORTED GLOBAL)
+  target_include_directories(BS_thread_pool INTERFACE ${BS_thread_pool_SOURCE_DIR}/include)
+endif()
 
 # Code coverage setup
 if(ENABLE_COVERAGE)
@@ -134,7 +136,7 @@ endif()
 # Link libraries
 target_link_libraries(
   ${LOKI_LIBRARY_NAME}
-  PRIVATE ${LOKI_COMPILE_OPTIONS} coverage_config
+  PRIVATE ${LOKI_COMPILE_OPTIONS} coverage_config 
   PUBLIC OpenMP::OpenMP_CXX
          HDF5::HDF5
          FFTW::Float
