Saving memory in FFA with some ping-pong tricks.
- Introduced in-place RFFT batch processing for improved memory efficiency.
- Updated `execute` methods in `BruteFold` to handle stride execution.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,6 +53,7 @@ install.strip = false
 BUILD_PYTHON = "ON"
 BUILD_TESTING = "OFF"
 BUILD_DOCS = "OFF"
+CMAKE_BUILD_PARALLEL_LEVEL = "4"
 
 [tool.cibuildwheel]
 test-extras = "test"
