Optimizing CUDA dynamic thresholding with redesigning. Now using one massive kernel launch. Difficulty level: hard
- Added `DualPoolFoldManager` for efficient memory management of fold vectors.
- Improved error handling in CUDA utilities with detailed error messages for cuRAND.

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -154,7 +154,7 @@ if(CMAKE_CUDA_COMPILER)
   target_link_libraries(
     ${LOKI_LIBRARY_NAME}
     PRIVATE ${LOKI_CUDA_OPTIONS}
-    PUBLIC CUDA::cudart CUDA::cufft
+    PUBLIC CUDA::cudart CUDA::cufft CUDA::curand
     PRIVATE CUDA::cuda_driver
   )
 endif()
