Refactor FFA and Pruning Classes
- Introduced FFAManager class to reduce frequency axis.
- Fully template FFAPlan and FFA class for time domain and Fourier domain.
- Added FFAResultWriter to write FFA results in HDF5 format.
- Updated Python bindings to bind template class.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -173,10 +173,12 @@ install(
 
 # Also install CUDA options if available
 if(CMAKE_CUDA_COMPILER)
-  install(
-    TARGETS ${LOKI_CUDA_OPTIONS}
-    EXPORT ${PROJECT_NAME}Targets
-  )
+  install(TARGETS ${LOKI_CUDA_OPTIONS} EXPORT ${PROJECT_NAME}Targets)
+endif()
+
+# Install coverage config if enabled
+if(ENABLE_COVERAGE)
+  install(TARGETS coverage_config EXPORT ${PROJECT_NAME}Targets)
 endif()
 
 # Install headers
